fix small layout bug
I made a whoopsie in #2250, this fixes it

closes #2274
pr #2268

--- a/static/scss/course-searchbox.scss
+++ b/static/scss/course-searchbox.scss
@@ -3,7 +3,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100%;
+
+  height: 252px;
+  @include breakpoint(phone) {
+    height: 115px;
+  }
 
   label {
     font-size: 24px;
